--- a/u01-eksmasterclass/README.adoc
+++ b/u01-eksmasterclass/README.adoc
@@ -110,6 +110,9 @@ eksctl create nodegroup --cluster=eksdemo \
   --full-ecr-access \
   --appmesh-access \
   --alb-ingress-acess
+
+# to Fix the issue: The connection to the server localhost:8080 was refused - did you specify the right host o port?
+aws eks --region sa-east-1 update-kubeconfig --name eksdemo
 ----
 
 [source,bash]
@@ -365,7 +368,6 @@ readinessProbe:
 ----
 k get nodes
 k describe node <<node>>
-
 ----
 
 .Classic Load Balance Communication Architecture
@@ -399,3 +401,150 @@ kubectl get nodes -o wide
 .Network Load Balance Communication Architecture
 image::../architecture/thumbs/NetworkLoadBalancerArch.drawio.png[]
 
+=== Ingress Controller with AWS Application Load Balancer
+
+* ALB supports routing by path-based, host-based, query parameters requests redirected
+* Support for containerized applications
+* ALBIC triggers bring the creation of an ALB the necessary supporting AWS resources whenever ingress resources are created under the cluster using _kubernetes.io/ingress.class:alb_
+
+==== Splitting Traffic Modes
+
+* Instance Mode: Work nodes need to be registered within cluster as targets for the ALB, with traffic reaching the ALB is routed to NodePort for your service and then proxied to pods using _alb.ingress.kubernetes.io/target-type:instance_
+
+* Ip Mode: Register pods as target for the alb, with trafficking reaching the alb directly using _alb.ingress.kubernetes.io/target:ip_
+
+.ALB Ingress Architecture
+image::../architecture/thumbs/alb_ingress_arch.png[]
+
+* AWS moves (rename and redesigned) _AWS ALB Ingress Controller_ to _AWS Application and Network Load Balancer_
+
+* IAM Role and ALB Load Balancer controller need to be tied with permissions
+
+
+.AWS Load Balancer Controller Architecture
+image::../architecture/thumbs/aws_alb_controller.png[]
+
+.IAM Policy
+[source,json]
+----
+{
+  "Version": "2012-10-17",
+  "Statement": [
+    {
+      "Effect": "Allow",
+      "Action": [
+        "iam:CreateServiceLinkedRole"
+      ],
+      "Resource": "*",
+      "Condition": {
+        "StringEquals": {
+          "iam:AWSServiceName": "elasticloadbalancing.amazonaws.com"
+        }
+      }
+    },
+    {
+      "Effect": "Allow",
+      "Action": [
+        "ec2:DescribeAccountAttributes",
+        "lot:of:permissions::actions::bellow"
+      ]
+    }
+  ]
+}
+----
+
+[source,bash]
+----
+aws iam create-policy --policy-name AWSLoabBalancerControllerIAMPolicy --policy-document file://policy-doc.json
+
+kubectl get sa -n kube-system
+# In this step anyone controller should exists
+kubectl get sa -aws-load-balancer-controller -n kube-system
+
+eksctl create iamserviceaccount ... wait for task done ...
+kubectl -n kubectl -n kube-system get deploy
+----
+
+=== Ingress & ALB
+
+.AWS EKS Network design Workload ALB & Ingress
+image::../architecture/thumbs/aws_eks-workload-alb-network.drawio.png[]
+
+.https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/guide/ingress/annotations/[ALB Ingress Annotations]
+[source,yaml]
+----
+apiVersion: networking.k8s.io/v1
+kind: IngressClass
+metadata:
+ name: my-aws-ingress.class
+ annotations:
+  ingressclass.kubernetes.io/is-default-class: "true"
+spec:
+  controller: ingress.k8s.aws/alb
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+ name: ingress-nginx-app1
+ labels:
+  app: app1-nginx
+ # critical
+ annotations:
+  alb.ingress.kubernetes.io/load-balancer-name: app1-ingress
+  alb.ingress.kubernetes.io/scheme: internet-facing
+  # Health check settings
+  alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
+  alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
+  alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
+  alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
+  alb.ingress.kubernetes.io/success-code: '200'
+  alb.ingress.kubernetes.io/healthy-threshold-count: '2'
+  alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
+spec:
+  ingressClassName: my-aws-ingress.class
+  rules:
+  - http:
+    paths:
+    - path: /testpath
+      pathType: Prefix
+      backend:
+        service:
+          name: app1-nginx-nodeport-service
+          port:
+            number: 80
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  ame: app1-nginx-deployment
+  labels:
+    app: app1-nginx
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app1-nginx
+  template:
+    metadata:
+      labels:
+        app: app1-nginx
+    spec:
+      containers:
+        - name: app1-nginx
+          image: docker-hub/nginx:v1.0
+---
+apiVersion: v1
+kind: Service
+metadata:
+ name: app1-nginx1-nodeport-service
+ labels:
+  app: app1-nginx1
+ annotations:
+spec:
+ type: NodePort
+ selector:
+  app: app1-nginx
+ ports:
+  - port: 80
+    targetPort: 80
+----
