--- a/b01-k8sinaction2nd/README.adoc
+++ b/b01-k8sinaction2nd/README.adoc
@@ -11,6 +11,7 @@
 - https://github.com/stacksimplify/kubernetes-fundamentals[K8s fundamentals]
 - https://kubernetes.io/docs/reference/kubectl/cheatsheet/[kubeclt Cheat Sheet]
 - https://github.com/apache/camel-quarkus-examples/tree/main/health[Camel Heath check Registry]
+- https://endoflife.date/quarkus-framework[LTS Quarkus versions]
 
 == Minikube Configuration
 
@@ -101,10 +102,29 @@ When deciding whether to use the sidecar pattern and place containers in a singl
 * Do they have to be scaled together?
 * Can a single node meet their combined resource needs?
 
+==== Understanding what Init containers can do
+
+. Initialize files in the volumes used by the pod’s main containers.
+This includes retrieving certificates and private keys used by the main container from secure certificate stores, generating config files, downloading data, and so on.
+
+. Initialize the pod’s networking system.
+Because all containers of the pod share the same network namespaces, and thus the network interfaces and configuration, any changes made to it by an init container also affect the main container.
+
+. Delay the start of the pod’s main containers until a precondition is met.
+For example, if the main container relies on another service being available before the container is started, an init container can block until this service is ready.
+
+. Notify an external service that the pod is about to start running.
+In special cases where an external system must be notified when a new instance of the application is started, an init container can be used to deliver this notification.
+
 .Generating native build
 [source,bash]
 ----
 mvn clean compile package -DskipTests -Dnative -Dquarkus.native.container-build=true
+
+mvn clean compile package -Pnative -Dquarkus.native.container-build=true -Dquarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel-builder-image:jdk-21
+
+./mvnw clean compile package -Pnative -Dquarkus.native.container-build=true -Dquarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel-builder-image:jdk-21
+
 #\
 #  -Dquarkus.native.builder-image=quarkus/mandrel-2-rhel8:22.3-21
 docker build -t app-backend-v1-native -f src/main/docker/Dockerfile.native .
@@ -118,6 +138,9 @@ k port-forward app-backendv01-ch05 8080:12080
 # SSL scenario
 k port-forward app-backendv01-ch05-ssl 8080:80 8443 9901
 k logs app-backendv01-ch05-ssl -c app-backendv01-ch05-ssl
+
+
+k port-forward quiz-camel-mongodb-app 8080:80
 ----
 
 .Create Manifest suing kubectl
@@ -184,7 +207,7 @@ k port-forward backend-api-ch05-liveness 8080:80
 ----
 
 .Specific for Native Compilation
-[source, shell]
+[source,shell]
 ----
 ➜  ~ curl -v -X GET -H "Content-type: application/json"  http://localhost:8080/api/greeting/douglas
 Note: Unnecessary use of -X or --request, GET is already inferred.
@@ -293,7 +316,7 @@ kubectl get po kiada-ssl -o json | jq .status.containerStatuses
 * _Post-start_, which are executed when the container starts, and
 * _Pre-stop_, which are executed shortly before the container
 
-[source, bash]
+[source,bash]
 ----
 # in case of Pod take a long time to start, or  can’t be executed or returns a non-zero exit code
 # we can looking internal process
@@ -301,22 +324,32 @@ k exec pod-name --ps x
 k get pods -w
 ----
 
-WARNING: Using an HTTP GET post-start hook might cause the container to enter an endless restart loop. Never configure this type of lifecycle hook to target the same container or any other container in the same pod.
+WARNING: Using an HTTP GET post-start hook might cause the container to enter an endless restart loop.
+Never configure this type of lifecycle hook to target the same container or any other container in the same pod.
 
 .Why doesn’t my application receive the TERM signal?
 ****
 
-Many developers make the mistake of defining a pre-stop hook just to send a TERM signal to their applications in the pre-stop hook. They do this when they find that their application never receives the TERM signal. The root cause is usually not that the signal is never sent, but that it is swallowed by something inside the container. This typically happens when you use the shell form of the ENTRYPOINT or the CMD directive in your Dockerfile. Two forms of these directives exist.
+Many developers make the mistake of defining a pre-stop hook just to send a TERM signal to their applications in the pre-stop hook.
+They do this when they find that their application never receives the TERM signal.
+The root cause is usually not that the signal is never sent, but that it is swallowed by something inside the container.
+This typically happens when you use the shell form of the ENTRYPOINT or the CMD directive in your Dockerfile.
+Two forms of these directives exist.
 
 The exec form is: `+ENTRYPOINT ["/myexecutable", "1st-arg", "2nd-arg"]+`
 
 The shell form is: `+ENTRYPOINT /myexecutable 1st-arg 2nd-arg+`
 
-When you use the exec form, the executable file is called directly. The process it starts becomes the root process of the container. When you use the shell form, a shell runs as the root process, and the shell runs the executable as its child process. In this case, the shell process is the one that receives the TERM signal. Unfortunately, it doesn’t pass this signal to the child process.
+When you use the exec form, the executable file is called directly.
+The process it starts becomes the root process of the container.
+When you use the shell form, a shell runs as the root process, and the shell runs the executable as its child process.
+In this case, the shell process is the one that receives the TERM signal.
+Unfortunately, it doesn’t pass this signal to the child process.
 
 In such cases, instead of adding a pre-stop hook to send the TERM signal to your app, the correct solution is to use the exec form of ENTRYPOINT or CMD.
 
-Note that the same problem occurs if you use a shell script in your container to run the application. In this case, you must either intercept and pass signals to the application or use the exec shell command to run the application in your script.
+Note that the same problem occurs if you use a shell script in your container to run the application.
+In this case, you must either intercept and pass signals to the application or use the exec shell command to run the application in your script.
 ****
 
 [source,bash]
@@ -460,7 +493,7 @@ Never configure this type of lifecycle hook to target the same container or any 
 
 == Attaching storage Volumes to Pods
 
-. We've 3 possibilities of volume creation,
+. We've three possibilities of volume creation,
 .. Container's volume, isolated filesystem
 .. Pod's volume can be shared with specific permissions
 .. External's volume, cross Pod lifecycles
@@ -482,10 +515,103 @@ image::../architecture/thumbs/attaching_dir_structure.png[]
 .A volume mounted into more than one container
 image::../architecture/thumbs/attached_volume_shared.png[]
 
+.Volumes are defined at the pod level and mounted in the pod’s containers
+image::../architecture/thumbs/pod-volume.png[]
+
+* The lifecycle of a volume is tied to the lifecycle of the entire pod and is independent of the lifecycle of the container in which it is mounted.
+
+* All volumes in a pod are created when the pod is set up—before any of its containers are started.
+They are torn down when the pod is shut down.
+
+* Just restarting the container and using the same corrupted files could result in an endless crash loop.
+
+* In pods with more than one container, some volumes can be mounted in some containers but not in others.
+This is especially useful when a volume contains sensitive information that should only be accessible to some containers.
+
+.A pod can contain multiple volumes and a container can mount multiple volumes
+image::../architecture/thumbs/pod-multiple-volumes.png[]
+
 [source,bash]
 ----
-k exec -it quiz -c mongo -- mongo
+k apply -f camelapp_pod_quiz_ephemeral.yaml
+k port-forward quiz-camel-mongodb-app 8080:80
+
+k exec -it quiz-camel-mongodb-app -c mongodb -- mongosh
+test>show dbs
+test>use quiz
+quiz>db.createCollection("Names")
+quiz>db.Names.insertOne({_id:1, "fname": "John": "lname": "Doe"})
+#
+k exec -it quiz-camel-mongodb-app -c mongodb -- mongosh admin --eval "db.shutdownServer()"
 ----
+
+image:../architecture/thumbs/pod-mongodb-volume.png[]
+
+=== Available Volume Types
+
+[%header,cols=2*]
+|===
+|Volume
+|Types
+
+|_emptyDir_
+|A simple directory that allows the pod to store data for the duration of its life cycle. The directory is created just before the pod starts and is initially empty - hence the name
+
+|_hostPath_
+|Used for mounting files from the worker node’s filesystem into the pod.
+
+|_nfs_
+|An NFS share mounted into the pod.
+
+|_gcePersistentDisk_
+|Google Compute Engine Persistent Disk
+
+|_awsElasticBlockStorage, awsElasticFileStorage_
+|AWS Persistent Disk
+
+|_azureFile, azureDisk_
+|Used for mounting cloud provider-specific storage.
+
+|_cephfs, cinder, fc, flexVolume, flocker, glusterfs, iscsi, portworxVolume, quobyte, rdb, scaleIO, storageos, photonPersistentDisk, vsphereVolu,e_
+|Used for mouting other types of nfs
+
+|_configMap, secretValue, downwardAPI, projected_
+|Special types of volumes used to expose information about the pod and other Kubernetes objects through files. They are typically used to configure the application running in the pod
+
+|_persistentVolumeClaim_
+|A portable way to integrate external storage into pods. Instead of pointing directly to an external storage volume
+
+|_persistentVolume_
+|Object that finally references the actual storage
+
+|_csi_
+|A pluggable way of adding storage via the Container Storage Interface. This volume type allows anyone to implement their own storage driver that is then referenced in the csi volume definition
+|===
+
+Each volume definition must include a _name_ and a type, which is indicated by the name of the nested field, (for example, emptyDir, gcePersistentDisk, nfs, and so on)
+
+The emptyDir volume type supports two fields for configuring the volume. They are explained in the following table.
+
+[%header,cols=2*]
+|===
+|Fields
+|Description
+
+|medium
+|The type of storage medium to use for the directory. If left empty, the default medium of the host node is used (the directory is created on one of the node’s disks). The only other supported option is Memory, which causes the volume to use tmpfs, a virtual memory filesystem where the files are kept in memory instead of on the hard disk.
+
+
+|sizeLimit
+|The total amount of local storage required for the directory, whether on disk or in memory. For example, to set the maximum size to ten mebibytes, you set this field to 10Mi.
+
+|===
+
+.Kubectl apply two pods, Writer and Watcher
+[source, bash]
+----
+k apply -f writer-watch
+----
+
 
 == Persistent Volumes and Claims
 
